--- a/src/main/js/index.css
+++ b/src/main/js/index.css
@@ -28,7 +28,7 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   min-width: 100vw;
   min-height: 100vh;
 }
